--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.6.8",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
